seeqt/QtCore/gen_qlibraryinfo.h

class QDate;
class QLibraryInfo;
class QVersionNumber;
typedef struct QDate QDate;
typedef struct QLibraryInfo QLibraryInfo;
typedef struct QVersionNumber QVersionNumber;
struct miqt_string QLibraryInfo_licensee();
struct miqt_string QLibraryInfo_licensedProducts();
QDate* QLibraryInfo_buildDate();
const char* QLibraryInfo_build();
bool QLibraryInfo_isDebugBuild();
QVersionNumber* QLibraryInfo_version();
struct miqt_string QLibraryInfo_location(int param1);
struct miqt_array /* of struct miqt_string */  QLibraryInfo_platformPluginArguments(struct miqt_string platformName);
void QLibraryInfo_delete(QLibraryInfo* self);